corrected contrast errors and file links

--- a/css/medium.css
+++ b/css/medium.css
@@ -3,7 +3,6 @@
         font-size: 55px;
         font-family: 'Lobster', cursive;
         text-align: left;
-        color: #cccc41;
     }
     
     h2 {
